--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+    rel="stylesheet">
     <title>Lens Light Photography</title>
 </head>
+
 <body>
-    <h1>Ola, Mundo!</h1>
+    <header class="cabecalho">
+        <a class="logo" href="#logo">Lens & Light Photography</a>
+        <nav>
+            <ul class="menu">
+                <a href="#home"><li class="item-menu">Home</li></a>
+                <a href="#portfolio"><li class="item-menu">Portfolio</li></a>
+                <a href="#contatos"><li class="item-menu">Contato</li></a>
+            </ul>
+        </nav>
+    </header>
+    <section class="hero">
+        <h1>Capturando momentos que contam histórias</h1>
+        <button>Veja Meu Trabalho</button>
+    </section>
 </body>
+
 </html>
