fix css and up index

--- a/index.html
+++ b/index.html
@@ -24,9 +24,17 @@
             </ul>
         </nav>
     </header>
-    <section class="hero">
+    <section id="home" class="hero">
+        <img class="background-desktop" src="src/img/background-desktop.svg" alt="background-desktop">
         <h1>Capturando momentos que contam histórias</h1>
         <button>Veja Meu Trabalho</button>
+    </section>
+    <section id="portfolio" class="portfolio-section">
+        <h2>Meus trabalhos</h2>
+        <div class="card-01">
+            <img src="src/img/imagem-01.jpg" alt="imagem-01">
+            <p>Ensaio ao ar livre - Primavera 2023.</p>
+        </div>
     </section>
 </body>
 
