--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
     </header>
 
     <section id="home" class="hero">
-        <img class="background-desktop" src="src/img/background-desktop.svg" alt="Imagem de fundo do site - natureza e fotografia" />
-        <h1>Capturando momentos que contam histórias</h1>
-        <button onclick="document.getElementById('portfolio').scrollIntoView({ behavior: 'smooth' })">Veja Meu Trabalho</button>
+        <div class="hero-content">
+            <h1>Capturando momentos que contam histórias</h1>
+            <button onclick="document.getElementById('portfolio').scrollIntoView({ behavior: 'smooth' })">Veja Meu Trabalho</button>
+        </div>
     </section>
 
     <section id="portfolio" class="portfolio-section">
